# v3gaverse-xd

./: .env  Cargo.toml  sqlx-data.json  v3gaverse-config.ron
journal/: journal.md
migrations/: 20230726061812_architect.up.sql  20230731064522_uuid.up.sql  20230811022059_alter-created-at-architects.down.sql  20230811022059_alter-created-at-architects.up.sql
resources/css/: style.css  style.css.map
resources/sass/: style.sass
src/: error.rs  lib.rs  main.rs
src/api/: app_error.rs  mod.rs  web_server.rs
src/api/router/: architect.rs  health_check.rs  mod.rs
src/configuration/: application.rs
src/data/: app_state.rs  architect.rs  iota.rs  mod.rs  postgres_repository.rs
src/data/architect/: model.rs  repository.rs
src/data/dao/: architect_dao.rs  mod.rs
src/data/dto/: architect_dto.rs  mod.rs
src/data/models/: mod.rs
src/server/: mod.rs
src/server/api/: app_error.rs  architect.rs  health_check.rs  mod.rs
src/server/dto/: architect_dto.rs
src/server/services/: architect_services.rs  mod.rs
src/web/: cyberdeck.rs  homepage.rs  mod.rs
